Server/esp_server/build/log/idf_py_stderr_output_48035
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'write_file':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:211:5: warning: 'esp_vfs_fat_sdmmc_unmount' is deprecated: Please use esp_vfs_fat_sdcard_unmount instead [-Wdeprecated-declarations]
  211 |     esp_vfs_fat_sdmmc_unmount();
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:6:
/home/zeila/Documents/CMPT496/Graphite/esp-idf/components/fatfs/vfs/esp_vfs_fat.h:221:11: note: declared here
  221 | esp_err_t esp_vfs_fat_sdmmc_unmount(void) __attribute__((deprecated("Please use esp_vfs_fat_sdcard_unmount instead")));
      |           ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'tcp_server_task':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:277:11: error: implicit declaration of function 'elif' [-Wimplicit-function-declaration]
  277 |         } elif (option == 2) {
      |           ^~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:277:29: error: expected ';' before '{' token
  277 |         } elif (option == 2) {
      |                             ^~
      |                             ;
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: At top level:
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:94:13: warning: 'wifi_init_softap' defined but not used [-Wunused-function]
   94 | static void wifi_init_softap() {
      |             ^~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/esp_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
